Lots-o-updates.  But I did it so long ago I don't know what they were

--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
     "description": "Jax game server built on socket.io",
     "version": "0.0.1",
     "dependencies": {
-        "socket.io": "*"
+        "socket.io": "*",
+        "mongodb": "*",
+        "base62": "*"
     }
 }
